--- a/build.xml
+++ b/build.xml
@@ -51,7 +51,7 @@
 		<!-- build the manifest -->
 		<manifest file="build/jar/META-INF/MANIFEST.MF">
 			<attribute name="Built-By" value="Dustin Norlander"/>
-			<attribute name="Main-Class" value="Main"/>  
+			<attribute name="Main-Class" value="com.trendrr.oss.networking.strest.ExampleMain"/>  
 			<attribute name="Built-Date" value="${TODAY}"/> 
 			<attribute name="Class-Path" value="${classpath}"/>
 		</manifest>
